[package]
name = "crypto"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.4.1"
rand = "0.7.3"
base64 = "0.13.0"
bls_eth_rust = { path = "/Users/neilgiridharan/Documents/PhD/aggregate_sigantures/bls-eth-rust/" }
